@@ -1,5 +1,8 @@
 2004-11-02  Vincent Noel  <vnoel@cox.net>
 
+	* info.c (LogInfo): Huge simplification. No more gtktreeview, just
+	display the properties in a textview.
+
 	* logview.c (logview_create_window_open_file): Don't update the
 	status bar or the window title here, this is already done in log_repaint.
 
